# obs-spout2-plugin

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  buildspec.json  win-spout-installer.nsi  win-spout.cpp
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/build-plugin/: action.yaml
.github/actions/package-plugin/: action.yaml
.github/actions/run-clang-format/: action.yaml
.github/scripts/: Build-Windows.ps1  BuildInstaller.ps1  win-spout-installer.nsi
.github/workflows/: build-project.yaml  check-format.yaml
build-aux/: .run-format.zsh  run-clang-format
cmake/common/: bootstrap.cmake  osconfig.cmake
data/locale/: en-US.ini  es-ES.ini  pt-BR.ini  zh-CN.ini
scripts/: Release.sh
source/: win-spout-config.cpp  win-spout-config.h  win-spout-filter.cpp  win-spout-output.cpp  win-spout-source.cpp  win-spout.cpp  win-spout.h
source/ui/: win-spout-output-settings.cpp  win-spout-output-settings.h  win-spout-output-settings.ui
